RESOLVED FIXED278214
Crash in `Messages::WebPage::PerformDragControllerAction` reply
https://bugs.webkit.org/show_bug.cgi?id=278214
Summary Crash in `Messages::WebPage::PerformDragControllerAction` reply
Charlie Wolfe
Reported 2024-08-15 21:25:07 PDT
Crash logs indicate that if this completion handler is called as a result of the web process shutting down we dereference a null `m_pageClient` in `WebPageProxy::didPerformDragControllerAction`.
Attachments
Charlie Wolfe
Comment 1 2024-08-15 21:25:09 PDT
Charlie Wolfe
Comment 2 2024-08-15 21:26:00 PDT
EWS
Comment 3 2024-08-16 13:28:21 PDT
Committed 282366@main (a253c001711d): <https://commits.webkit.org/282366@main> Reviewed commits have been landed. Closing PR #32286 and removing active labels.
EWS
Comment 4 2024-08-16 18:28:52 PDT
Committed 280938.242@safari-7619-branch (8261fffee319): <https://commits.webkit.org/280938.242@safari-7619-branch> Reviewed commits have been landed. Closing PR #1612 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.