Crash in `Messages::WebPage::PerformDragControllerAction` reply https://bugs.webkit.org/show_bug.cgi?id=278214 rdar://124961036

Reviewed by Pascoe.

Crash logs indicates that m_pageClient can be null if this completion handler is called as a result of
the web process terminating.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::performDragControllerAction):

Canonical link: https://commits.webkit.org/282366@main